--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,5 +13,4 @@
 <% if @user.orders.length > 0 %>
   <%= link_to "My Orders", profile_orders_path(@user) %>
 <% end %>
-
-<%= link_to "Edit Profile", profile_edit_path(@user) %>
+<%= link_to "Edit Profile", "/profile/#{@user.id}/edit" %>
