--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :profile, :url => {:action => "update", :id => @user} do |f| %>
+<%= form_for :profile, :url => user_path(@user), method: :put do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name, placeholder: @user.name %>
 
