--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,30 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
+  <header>
+    <h1>Welcome to the Little Git Shop</h1>
+    <div class='nav'>
+      <ul>
+        <li><%= link_to 'Home', root_path, class: 'home-link'%></li>
+        <li><%= link_to 'All Items', items_path, class: 'all-items-link'%></li>
+        <li><%= link_to 'All Merchants', merchants_path, class: 'all-merchants-link'%></li>
+        <li><%= link_to 'Shopping Cart', cart_path, class: 'shopping-cart-link'%></li>
+        <% if current_user %>
+          <li><%= link_to 'Log Out', logout_path, class: 'logout-link', method: :delete, data: {confirm: "Do you really want to delete this book?"}%></li>
+        <% else %>
+          <li><%= link_to 'Log In', login_path, class: 'login-link'%></li>
+          <li><%= link_to 'Register', register_path, class: 'register-link'%></li>
+        <% end %>
+      </ul>
+    </div>
+  </header>
+
   <body>
-    <% flash.each do |name,msg| -%>
-      <%= content_tag :div, msg, class: name %>
-    <% end %>
+    <div class='flash'>
+      <% flash.each do |name,msg| -%>
+        <%= content_tag :div, msg, class: name %>
+      <% end %>
+    </div>
     <%= yield %>
   </body>
 </html>
