--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,24 +1,28 @@
-<%= form_for :profile, :url => user_path(@user), method: :put do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name, placeholder: @user.name %>
+<br>
+<div class='form'>
+  <h2>Edit Profile</h2>
+  <%= form_for :profile, :url => user_path(@user), method: :put do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name, placeholder: @user.name %>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %>
+    <br><%= f.label :password %>
+    <%= f.password_field :password %>
 
-  <%= f.label :street_address %>
-  <%= f.text_field :street_address, placeholder: @user.street_address %>
+    <br><%= f.label :street_address %>
+    <%= f.text_field :street_address, placeholder: @user.street_address %>
 
-  <%= f.label :city %>
-  <%= f.text_field :city, placeholder: @user.city%>
+    <br><%= f.label :city %>
+    <%= f.text_field :city, placeholder: @user.city%>
 
-  <%= f.label :state %>
-  <%= f.text_field :state, placeholder: @user.state %>
+    <br><%= f.label :state %>
+    <%= f.text_field :state, placeholder: @user.state %>
 
-  <%= f.label :zip %>
-  <%= f.number_field :zip, placeholder: @user.zip %>
+    <br><%= f.label :zip %>
+    <%= f.number_field :zip, placeholder: @user.zip %>
 
-  <%= f.label :email %>
-  <%= f.text_field :email, placeholder: @user.email %>
+    <br><%= f.label :email %>
+    <%= f.text_field :email, placeholder: @user.email %>
 
-  <%= f.submit "Edit User" %>
-<% end %>
+    <br><%= f.submit "Edit User" %>
+  <% end %>
+</div>
