--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,13 +2,16 @@
 
 <div class='orders'>
 <% @orders.each do |order| %>
-  <div class="each_order" id="order#{item.id}">
+  <div class="each_order" id="order<%=  order.id%>">
     <br><br><%= link_to order.id, order_path(order) %>
     <br>Created at: <%= order.created_at %>
     <br>Last updated: <%= order.updated_at %>
     <br>Current Status: <%= order.status %>
     <br>Number of Items: <%= order.item_count %>
     <br>Grand Total: <%= number_to_currency(order.grand_total) %>
+    <% if order.status == "pending" %>
+      <%= link_to "Cancel Order", order_path(order), method: :delete, data: {confirm: "Really cancel the order?"}, class: 'delete-button' %>
+    <% end %>
     </div>
 <% end %>
 </div>
