redirects to registration with previous fields

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,7 +8,7 @@
   <%= f.label :state %>
   <%= f.text_field :state %>
   <%= f.label :zip %>
-  <%= f.text_field :zip %>
+  <%= f.number_field :zip %>
   <%= f.label :email %>
   <%= f.text_field :email %>
   <%= f.label :password %>
