adds some css to idex pages

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -18,6 +18,11 @@ header {
   position: relative;
 }
 
+.merchants{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 .flash{
   color: red;
   font-size: 25px;
