--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,14 +5,14 @@
   <div class='each_item' id="user<%=user.id%>">
     <%= link_to user.name, user_path(user) %>
      <% if user.active == true %>
-      <%= form_for user do |f| %>
+      <%= form_for user, url: admin_user_path(user), method: :patch do |f| %>
         <%= f.hidden_field :active, :value => false %>
-        <%= f.submit "Disable", class: "btn btn-default"%>
+        <%= f.submit "Disable"%>
       <% end %>
     <% else %>
-      <%= form_for user do |f| %>
+      <%= form_for user, url: admin_user_path(user), method: :patch do |f| %>
         <%= f.hidden_field :active, :value => true %>
-        <%= f.submit "Enable", class: "btn btn-default"%>
+        <%= f.submit "Enable"%>
         <% end %>
     <% end %>
     </div>
