--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h2> Welcome back <%= @user.name %>! </h2>
+<h2> <%= @user.name %></h2>
 <section class='user'>
   <div class="user-data">
     <h2>User info:</h2>
