--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,12 @@
   </div>
 </section>
 <br>
-<h2>Orders</h2>
+
+<h2>My Orders</h2>
 <% if @user.orders.length > 0 %>
   <%= link_to "My Orders", profile_orders_path(@user) %>
+<% end %>
+
+<% if @user.role == "admin" %>
+  <%= link_to "All Orders", orders_path %>
 <% end %>
