--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
         <li><%= link_to 'All Merchants', merchants_path, class: 'all-merchants-link'%></li>
         <li><%= link_to "Shopping Cart (#{@cart_count})", cart_path, class: 'shopping-cart-link'%></li>
         <% if current_user %>
+          <% if current_user.role == "merchant" %>
+            <li> <%= link_to 'My Dashboard', dashboard_path, class: 'dashboard-link'%></li>
+          <% end %>
           <li><%= link_to 'Log Out', logout_path, class: 'logout-link', method: :delete, data: {confirm: "Do you really want to log out?"}%></li>
         <% else %>
           <li><%= link_to 'Log In', login_path, class: 'login-link'%></li>
