adds links to user header

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,3 +1,5 @@
-<% if @merchant.merchant_orders != [] %>
-  <%= link_to "Orders", dashboard_orders_path %>
-<% end %>
+<div class="dashboard_orders">
+  <% if @merchant.merchant_orders != [] %>
+    <%= link_to "Orders", dashboard_orders_path %>
+  <% end %>
+</div>
