--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
           <% if current_user.role == "merchant" %>
             <li> <%= link_to 'My Dashboard', dashboard_path, class: 'dashboard-link'%></li>
           <% end %>
+          <li> <%= link_to 'My Orders', profile_orders_path, class: 'orders-link'%></li>
+          <li> <%= link_to 'My Profile', profile_path, class: 'profile-link'%></li>
+
           <li><%= link_to 'Log Out', logout_path, class: 'logout-link', method: :delete, data: {confirm: "Do you really want to log out?"}%></li>
         <% else %>
           <li><%= link_to 'Log In', login_path, class: 'login-link'%></li>
