--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,11 @@
         <li><%= link_to 'All Merchants', merchants_path, class: 'all-merchants-link'%></li>
         <li><%= link_to "Shopping Cart (#{@cart_count})", cart_path, class: 'shopping-cart-link'%></li>
         <% if current_user %>
-          <% if current_user.role == "merchant" %>
+          <% if current_user.role != "user" %>
             <li> <%= link_to 'My Dashboard', dashboard_path, class: 'dashboard-link'%></li>
+          <% end %>
+          <% if current_user.admin?  %>
+            <li> <%= link_to 'All Users', users_path, class: 'dashboard-link'%></li>
           <% end %>
           <li> <%= link_to 'My Orders', profile_orders_path, class: 'orders-link'%></li>
           <li> <%= link_to 'My Profile', profile_path, class: 'profile-link'%></li>
