Add All Users functionality for admin

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,6 @@
-<h2>All Merchants</h2>
+<div class="user-index-header">
+  <h2>All <%=@header%></h2>
+</div>
 
 <div class='merchants'>
 <% @users.each do |user| %>
