--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
             <li> <%= link_to 'My Dashboard', dashboard_path, class: 'dashboard-link'%></li>
           <% end %>
           <% if current_user.admin?  %>
-            <li> <%= link_to 'All Users', users_path, class: 'dashboard-link'%></li>
+            <li> <%= link_to 'All Users', '/users?display=all', class: 'dashboard-link'%></li>
           <% end %>
           <li> <%= link_to 'My Orders', profile_orders_path, class: 'orders-link'%></li>
           <li> <%= link_to 'My Profile', profile_path, class: 'profile-link'%></li>
