--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,11 +16,13 @@
 </section>
 <br>
 
-<h2>My Orders</h2>
-<% if @user.orders.length > 0 %>
-  <%= link_to "My Orders", profile_orders_path(@user) %>
-<% end %>
+<div class="user_orders">
+  <% if @user.orders.length > 0 %>
+  <h2>My Orders</h2>
+    <%= link_to "My Orders", profile_orders_path(@user) %>
+  <% end %>
 
-<% if @user.role == "admin" %>
-  <%= link_to "All Orders", orders_path %>
-<% end %>
+  <% if @user.role == "admin" %>
+    <%= link_to "All Orders", orders_path %>
+  <% end %>
+</div>
