adds link to merchant items

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -3,3 +3,7 @@
     <%= link_to "Orders", dashboard_orders_path %>
   <% end %>
 </div>
+
+<div class="dashboard_items">
+  <%= link_to "My Items", dashboard_items_path %>
+</div>
