--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,4 +6,4 @@
   <li><strong>In Stock: </strong><%= @item.inventory_count %></li>
   <li><strong>Price: $</strong><%= @item.price %></li>
 </ul>
-<%= button_to "Add to Cart", carts_path(item_id: @item.id) %>
+<%= button_to "Add to Cart", cart_path(item_id: @item.id) %>
