--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,3 +1,12 @@
+<div id='checkout-notice'>
+  <% if @current_user %>
+
+  <% else %>
+    Please <%= link_to "Log In" ,login_path, class: "login-banner-link" %> or <%= link_to "Register" ,register_path, class: "register-banner-link" %> to Finish Checkout
+  <% end %>
+
+</div>
+
 <% @items.each do |item, quantity| %>
   <div id="item-<%= item.id %>"  >
     <span>
