add checkout button to cart

--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,6 +1,6 @@
 <div id='checkout-notice'>
   <% if @current_user %>
-
+  <%= button_to "Checkout", profile_orders_path %>
   <% else %>
     Please <%= link_to "Log In" ,login_path, class: "login-banner-link" %> or <%= link_to "Register" ,register_path, class: "register-banner-link" %> to Finish Checkout
   <% end %>
