--- a/app/views/dashboard/items/index.html.erb
+++ b/app/views/dashboard/items/index.html.erb
@@ -1,5 +1,7 @@
+<h2> My Items </h2>
+
 <div class="add_item">
-  <br><br><%= link_to "Add New Item", new_dashboard_item_path %>
+  <%= link_to "Add New Item", new_dashboard_item_path %>
 </div>
 
 <div class='items'>
