--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,17 +6,19 @@
 <% @users.each do |user| %>
   <div class='each_item' id="user<%=user.id%>">
     <%= link_to user.name, user_path(user) %>
-     <% if user.active == true %>
-      <%= form_for user, url: admin_user_path(user), method: :patch do |f| %>
-        <%= f.hidden_field :active, :value => false %>
-        <%= f.submit "Disable"%>
-      <% end %>
-    <% else %>
-      <%= form_for user, url: admin_user_path(user), method: :patch do |f| %>
-        <%= f.hidden_field :active, :value => true %>
-        <%= f.submit "Enable"%>
+      <% if current_admin? %>
+        <% if user.active == true %>
+          <%= form_for user, url: admin_user_path(user), method: :patch do |f| %>
+            <%= f.hidden_field :active, :value => false %>
+            <%= f.submit "Disable"%>
+          <% end %>
+        <% else %>
+          <%= form_for user, url: admin_user_path(user), method: :patch do |f| %>
+            <%= f.hidden_field :active, :value => true %>
+            <%= f.submit "Enable"%>
+          <% end %>
         <% end %>
-    <% end %>
+      <% end %>
     </div>
 <% end %>
 </div>
