Finish final test of name link to item show page

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,12 +3,14 @@
 Buyer Name: <%= @user.name %><br>
 Buyer Address: <%= @user.street_address %><br>
 
-<h3>Items Ordered</h3>
-<% @order_items.each do |oi| %>
-  <% if oi.associated_id(oi).user_id == current_user.id %>
-    <%= image_tag(oi.associated_id(oi).image) %><br>
-    Item Name: <%= oi.associated_id(oi).name %><br>
-    Price: <%= number_to_currency(oi.item_price) %><br>
-    Quantity: <%= oi.item_quantity %><br>
+<% if @order_items != nil %>
+  <h3>Items Ordered</h3>
+  <% @order_items.each do |oi| %>
+    <% if oi.associated_id(oi).user_id == current_user.id %>
+      <%= image_tag(oi.associated_id(oi).image) %><br>
+      Item Name: <%= link_to oi.associated_id(oi).name, item_path(oi.associated_id(oi)) %><br>
+      Price: <%= number_to_currency(oi.item_price) %><br>
+      Quantity: <%= oi.item_quantity %><br>
+    <% end %>
   <% end %>
 <% end %>
