Add fulfilled button functionality to order show page

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,14 +3,26 @@
 Buyer Name: <%= @user.name %><br>
 Buyer Address: <%= @user.street_address %><br>
 
+
 <% if @order_items != nil %>
   <h3>Items Ordered</h3>
   <% @order_items.each do |oi| %>
+  <div class="each_item" id="oi<%= oi.id%>">
     <% if oi.associated_id(oi).user_id == current_user.id %>
       <%= image_tag(oi.associated_id(oi).image) %><br>
       Item Name: <%= link_to oi.associated_id(oi).name, item_path(oi.associated_id(oi)) %><br>
       Price: <%= number_to_currency(oi.item_price) %><br>
       Quantity: <%= oi.item_quantity %><br>
+      <% if oi.fulfill == true %>
+        Status: <%= "Fulfilled" %>
+      <% else %>
+        <%= form_for oi, url: order_item_path(oi), method: :patch do |f| %>
+          <%= f.hidden_field :fulfill, :value => true %>
+          <%= f.hidden_field :order_id, :value => oi.order_id %>
+          <%= f.submit "Fulfill"%>
+        <% end %>
+      <% end %>
     <% end %>
+    </div>
   <% end %>
 <% end %>
