--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,7 +7,7 @@
 <div class='orders'>
 <% @orders.each do |order| %>
   <div class="each_item" id="order<%= order.id%>">
-    <br><br><%= link_to order.id, order_path(order) %>
+    Order Id: <%= link_to order.id, order_path(order) %>
     <br>Created at: <%= order.created_at %>
     <br>Last updated: <%= order.updated_at %>
     <br>Current Status: <%= order.status %>
