--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -7,21 +7,18 @@ Buyer Address: <%= @user.street_address %><br>
 <% if @order_items != nil %>
   <h3>Items Ordered</h3>
   <% @order_items.each do |oi| %>
-    <% if oi.associated_id(oi).user_id == current_user.id %>
+    <% if oi.item.user_id == current_user.id %>
     <div class="each_item" id="oi<%= oi.id%>">
-      <%= image_tag(oi.associated_id(oi).image) %><br>
-      Item Name: <%= link_to oi.associated_id(oi).name, item_path(oi.associated_id(oi)) %><br>
+      <%= image_tag(oi.item.image) %><br>
+      Item Name: <%= link_to oi.item.name, item_path(oi.item) %><br>
       Price: <%= number_to_currency(oi.item_price) %><br>
       Quantity: <%= oi.item_quantity %><br>
-      <% if oi.item_quantity <=  oi.associated_id(oi).inventory_count %>
-        <% if oi.fulfill == true %>
-          Status: <%= "Fulfilled" %>
-        <% else %>
-          <%= form_for oi, url: order_item_path(oi), method: :patch do |f| %>
-            <%= f.hidden_field :fulfill, :value => true %>
-            <%= f.hidden_field :order_id, :value => oi.order_id %>
-            <%= f.submit "Fulfill"%>
-          <% end %>
+      <%= "Status: Fulfilled" if oi.fulfill %>
+      <% if oi.item_quantity <=  oi.item.inventory_count %>
+        <%= form_for oi, url: order_item_path(oi), method: :patch do |f| %>
+          <%= f.hidden_field :fulfill, :value => true %>
+          <%= f.hidden_field :order_id, :value => oi.order_id %>
+          <%= f.submit "Fulfill"%>
         <% end %>
       <% else %>
         <div class="flash">
