Merchant can edit item

--- a/app/views/dashboard/items/new.html.erb
+++ b/app/views/dashboard/items/new.html.erb
@@ -9,7 +9,7 @@
     <%= f.text_field :description %>
 
     <br><%= f.label :image %>:
-    <%= f.text_field :image %>
+    <%= f.text_field :image, placeholder: "https://www.formaggiokitchen.com/shop/media/catalog/category/Honey-Category-Hero.jpg" %>
 
     <br><%= f.label :price %>:
     <%= f.text_field :price %>
