--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,11 @@
+<div class= "statistics">
+  <div class= "top_item">
+    <% @top_item.each do |item| %>
+    <%= item.name %>
+    <% end %>
+  </div>
+</div>
+
 <h2>All Items</h2>
 
 <div class='items'>
