--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,6 +4,12 @@
     <%= item.name %>
     <% end %>
   </div>
+
+  <div class= "top_merch">
+    <% @top_merch.each do |merch| %>
+    <%= merch.name %>
+    <% end %>
+  </div>
 </div>
 
 <h2>All Items</h2>
