admin edits merchant info

--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,1 +1,2 @@
-<%= button_to "Downgrade User", user_path(@merchant, toggle: "merchant"), method: :patch, class: "downgrade_button" %>
+<%= button_to "Downgrade User", user_path(@merchant, toggle: "merchant"), method: :patch, class: "downgrade-button" %>
+<%= link_to "Edit Merchant Profile", edit_user_path(@merchant), class: "edit-merchant-button" %>
