--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,18 +1,22 @@
-<%= form_for @item do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+<br>
+<div class='form'>
+  <h2>Edit Item </h2>
+  <%= form_for @item do |f| %>
+    <%= f.label :name %>:
+    <%= f.text_field :name %><br>
 
-  <%= f.label :description %>
-  <%= f.text_field :description %>
+    <%= f.label :description %>:
+    <%= f.text_field :description %><br>
 
-  <%= f.label :image %>
-  <%= f.text_field :image %>
+    <%= f.label :image %>:
+    <%= f.text_field :image %><br>
 
-  <%= f.label :price %>
-  <%= f.text_field :price %>
+    <%= f.label :price %>:
+    <%= f.text_field :price %><br>
 
-  <%= f.label :inventory_count %>
-  <%= f.text_field :inventory_count %>
+    <%= f.label :inventory_count %>:
+    <%= f.text_field :inventory_count %><br>
 
-  <%= f.submit %>
-<% end %>
+    <%= f.submit %>
+    <% end %>
+</div>
