--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,16 +1,24 @@
+<h2> Statistics </h2>
 <div class= "statistics">
   <div class= "top_item">
+    <h2> Top Items </h2>
+    <ul>
     <% @top_item.each do |item| %>
-    <%= item.name %>
+      <li><%= item.name %></li>
     <% end %>
+    </ul>
   </div>
 
   <div class= "top_merch">
+    <h2> Top Merchants </h2>
+    <ul>
     <% @top_merch.each do |merch| %>
-    <%= merch.name %>
+      <li><%= merch.name %></li>
     <% end %>
+    </ul>
   </div>
 </div>
+<br>
 
 <h2>All Items</h2>
 
