--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,3 +1,7 @@
-<%= button_to "Downgrade User", user_path(@merchant, toggle: "merchant"), method: :patch, class: "downgrade-button" %>
+<br>
+<h2><%= @merchant.name %></h2>
+<%= button_to "Downgrade User", user_path(@merchant, toggle: "merchant"), method: :patch, class: "button" %>
+<br><br>
 <%= link_to "Edit Merchant Profile", edit_user_path(@merchant), class: "edit-merchant-button" %>
+<br><br>
 <%= link_to "Merchant Orders", merchant_orders_path(@merchant), class: "merchant-orders-button" %>
