--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -8,3 +8,4 @@
 <%= link_to "Edit Merchant Profile", edit_user_path(@user), class: "edit-merchant-button" %>
 <br><br>
 <%= link_to "Merchant Orders", merchant_orders_path(@user), class: "merchant-orders-button" %>
+<%= link_to "Merchant Items", merchant_items_path(@user), class: "merchant-items-button" %>
