Write test for top orders by item count

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -11,8 +11,10 @@
       <%= link_to "My Items", dashboard_items_path %>
     </div>
   </div>
+
 <% elsif current_admin? %>
-<div class="statistics">Statistics
+<h2>Statistics</h2>
+<div class="statistics">
 <div class="top-spenders">
   <h2>Top Spenders</h2>
   <ul>
